--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,28 @@ services:
     entrypoint: bash
     stdin_open: true
     tty: true
+
   db:
-    image: postgres
+    image: mysql:5.7
+    ports:
+      - "6000:3306"
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: database
+      MYSQL_ROOT_PASSWORD: root
+    # volumes:
+    #   - ./db:/docker-entrypoint-initdb.d/:ro
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "7000:80"
+    links:
+      - db:db
+    environment:
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - database:/var/lib/mysql
+
+volumes:
+  database:
