--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,12 @@ services:
       - 8080:8080
     depends_on:
       - "db"
+    networks:
+      - appnet
     entrypoint: bash
     stdin_open: true
     tty: true
+    container_name: api
 
   db:
     image: mysql:5.7
@@ -24,8 +27,9 @@ services:
       - "6000:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-    # volumes:
-    #   - ./db:/docker-entrypoint-initdb.d/:ro
+    container_name: db
+    networks:
+      - appnet
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -39,6 +43,12 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - database:/var/lib/mysql
+    networks:
+      - appnet
+    container_name: phpmyadmin
 
 volumes:
   database:
+
+networks:
+  appnet:
